--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "Kanjidex",
   "name": "Kanjidex",
   "version": "3.4",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "A simple extension for looking up kanji characters.",
   "author": "hisekai",
   "icons": {
@@ -11,14 +11,13 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "./icons/browser_icon.png",
     "default_title": "Kanjidex",
     "default_popup": "index.html"
   },
   "background": {
-    "scripts": ["./background.js"],
-    "persistent": false
+    "service_worker": "./background.js"
   },
   "content_scripts": [
     {
@@ -29,11 +28,13 @@
     }
   ],
   "permissions": [
-    "<all_urls>",
-    "*://*.jisho.org/*",
     "activeTab",
     "contextMenus",
     "storage",
     "notifications"
+  ],
+  "host_permissions": [
+    "<all_urls>",
+    "*://*.jisho.org/*"
   ]
 }
